# aegis-ai

./: .env.example  .gitignore  .vercelignore  Cargo.toml  GUARDIAN_IMPL_GUIDE (1).md  GUARDIAN_README (1).md  README.md  SKILL.md  diesel.toml  package.json  pnpm-lock.yaml  vercel.json
.initia/: local-rollup.json  submission.json
contracts/guardian-approval-lab/: Cargo.toml
contracts/guardian-approval-lab/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/guardian-policy/: Cargo.toml
contracts/guardian-policy/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/guardian-risk-lab/: Cargo.toml
contracts/guardian-risk-lab/src/: contract.rs  error.rs  msg.rs  state.rs
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: anomaly.rs  approvals.rs  contract.rs  dust.rs  ica.rs  lib.rs  liquidity.rs  llm.rs  poison.rs  reentrancy.rs  slippage.rs  swap.rs
crates/api/: Cargo.toml
crates/api/src/: dashboard.rs  lib.rs  proxy.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  policy.rs  schema.rs  state.rs  storage.rs  types.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  config.ts  env.d.ts  main.tsx  styles.css
frontend/src/components/: NeuralMesh.tsx  ProtectionSphere.tsx  SiteBrand.tsx  SubpageHeader.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  OnboardingPage.tsx  SimulationPage.tsx
migrations/: 001_initial.sql
migrations/2026-04-21-000001_initial_schema/: down.sql  up.sql
migrations/2026-04-21-000002_user_profile_and_simulation_target/: down.sql  up.sql
migrations/2026-04-21-000003_email_notifications/: down.sql  up.sql
migrations/2026-04-21-000004_approval_metadata/: down.sql  up.sql
simulations/: Cargo.toml  README.md
simulations/src/: lib.rs
