[workspace]
members = [
    "crates/core",
    "crates/monitor",
    "crates/analyzer",
    "crates/simulator",
    "crates/agent",
    "crates/notifier",
    "crates/api",
    "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
bb8 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
