[workspace]
members = [
    "crates/core",
    "crates/monitor",
    "crates/analyzer",
    "crates/simulator",
    "crates/agent",
    "crates/notifier",
    "crates/api",
    "crates/app",
    "simulations",
]
exclude = ["contracts/guardian-policy", "contracts/guardian-risk-lab"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bb8 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cosmrs = "0.22"
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
diesel_migrations = "2"
dotenvy = "0.15"
futures-util = { version = "0.3", features = ["async-await-macro"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[patch.crates-io]
diesel-async = { path = "vendor/diesel-async" }
