[package]
name = "guardian-simulations"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
guardian-analyzer = { path = "../crates/analyzer" }
guardian-core = { path = "../crates/core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
