[package]
name = "guardian-policy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = ["cosmwasm_1_3"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = "1.0.69"
rmp = "=0.8.14"
rmp-serde = "=1.3.0"

[dev-dependencies]
serde_json = "1.0.138"
