[package]
name = "guardian-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
guardian-analyzer = { path = "../analyzer" }
guardian-core = { path = "../core" }
guardian-simulator = { path = "../simulator" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
