[package]
name = "guardian-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
guardian-agent = { path = "../agent" }
guardian-core = { path = "../core" }
guardian-notifier = { path = "../notifier" }
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
