[package]
name = "guardian-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
cosmrs = { workspace = true, features = ["cosmwasm"] }
futures-util.workspace = true
guardian-agent = { path = "../agent" }
guardian-analyzer = { path = "../analyzer" }
guardian-core = { path = "../core" }
guardian-notifier = { path = "../notifier" }
guardian-simulations = { path = "../../simulations" }
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
