[package]
name = "guardian-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
guardian-agent = { path = "../agent" }
guardian-analyzer = { path = "../analyzer" }
guardian-api = { path = "../api" }
guardian-core = { path = "../core" }
guardian-monitor = { path = "../monitor" }
guardian-notifier = { path = "../notifier" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
