[package]
name = "guardian-notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
guardian-core = { path = "../core" }
lettre.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
